Messages have a reply function

--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,12 @@ a:link:hover{
   float: right;
 }
 
+.reply {
+  color: gray;
+  opacity: 0.6;
+  float: right;
+}
+
 table, th, td {
   border: 1px solid #261C15;
   border-collapse: collapse;
